# intro-socet

./: .gitignore  .gitmodules
digital/example/: Makefile
digital/example/src/: counter.sv  fsm_control.sv  shift_register.sv  uart_pkg.sv  uart_tx.sv
digital/example/tb/: tb_uart_tx.sv
digital/lab3/: Makefile  README.md
digital/lab3/src/: alu.sv  copier_controller.sv  div.sv  mul.sv  stack.sv  stack_calculator.sv
digital/lab3/tb/: tb_mul.sv  tb_stack.sv
digital/lab4/: README.md
digital/lab4/src/: copier_controller.sv
systems/lab1/: CMakeLists.txt  README.md  resources.txt
systems/lab1/docs/: ft.md
systems/lab1/images/: cat.pgm  pete.pgm  purdue.pgm
systems/lab1/scripts/: dump_fs.sh  generate_fs.sh  generate_lookups.py  generate_sin_table.py  square_wave.py
systems/lab1/source/: fft.c  fft.h  filter.c  filter.h  fp.S  fp.c  fp.h  image.c  image.h  lookup.h  main.c  sin.h
systems/lab1/test/: test_fp_add.c  test_fp_mul.c
systems/lab2/: README.md
tutorial/: Makefile  README.md
tutorial/src/: first_module.sv  ha.sv
tutorial/tb/: tb_first_module.sv
